@@ -45,6 +45,7 @@ batScriptConfigLocation := Some("%APP_HOME%\\conf\\smile.ini")
 bashScriptExtraDefines ++= Seq(
   """addJava "-Dsmile.home=${app_home}/.."""",
   """addJava "-Dscala.usejavacp=true"""", // for Scala REPL
+  """addJava "--enable-native-access=ALL-UNNAMED"""",
   """addJava "-Dscala.repl.autoruncode=${app_home}/predef.sc""""
 )
 
@@ -52,10 +53,10 @@ batScriptExtraDefines ++= Seq(
   """call :add_java -Dsmile.home=%APP_HOME%""",
   """call :add_java -Dscala.usejavacp=true""",
   """call :add_java -Dscala.repl.autoruncode=%APP_HOME%\bin\predef.sc""",
-  """call :add_java -Djava.library.path=%APP_HOME%\bin""",
+  """call :add_java --enable-native-access=ALL-UNNAMED""",
   """set OPENBLAS_NO_AVX512=1""",
   """set OPENBLAS_NUM_THREAD=1""",
-  """set PATH=!PATH!;%~dp0"""
+  """set PATH=!PATH!;%APP_HOME%\bin"""
 )
 
 libraryDependencies ++= Seq(
